# AIJOBHUNTER

./: .env.example  .gitignore  README.md  docker-compose.yml  workflow.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py  providers.py  security.py
backend/app/linkedin/: crawler.py  easy_apply.py  job_parser.py  login.py  resume_manager.py  workflow.py
backend/app/models/: application.py  company.py  job.py  log.py  resume.py  settings.py
backend/app/repositories/: application_repository.py  base.py  company_repository.py  job_repository.py  log_repository.py  settings_repository.py
backend/app/routers/: dashboard.py  jobs.py  logs.py  settings.py
backend/app/scheduler/: tasks.py
backend/app/schemas/: application.py  company.py  job.py  settings.py
backend/app/tests/: conftest.py  test_services.py
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  index.css
