[project]
name = "ai-job-hunter-backend"
version = "0.1.0"
description = "Backend for AI Job Hunter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "playwright>=1.42.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
    "cryptography>=42.0.5",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.3",
]
